tests/baselines/reference/thisKeyword.errors.txt
==== tests/cases/compiler/thisKeyword.ts (1 errors) ====
    module foo {
        this.bar = 4;
        ~~~~
!!! thisKeyword.ts(2,5): error TS2108: 'this' cannot be referenced within module bodies.
    }